// PlatformManager — ERD dự kiến cho ứng dụng "DTI Weekly"
// (theo dõi tiến độ chuyển đổi số hàng tuần)
//
// Đây là ERD DỰ KIẾN cho lần scaffold + migration đầu tiên của src/BE,
// KHÔNG PHẢI schema đã chốt / migration đã chạy. Đối chiếu lại với người
// dùng trước khi tạo migration thật (xem src/BE/.claude/rules/entity-domain.md
// mục "Khi thêm entity mới").
//
// Tổng hợp từ 2 nguồn:
//   1. doc/ERD/example_db_ver1.csv        — dữ liệu MẪU, 62 chỉ tiêu (1 dòng/chỉ tiêu, không có khái niệm "tuần")
//   2. doc/Prototype/dashboard.html       — prototype JS xác nhận khái niệm theo dõi THEO TỪNG KỲ (tuần)
//
// Chi tiết mô tả từng entity + trích dẫn nguồn: xem doc/ERD/ERD.md
//
// Quyết định đã CHỐT (người dùng xác nhận, không còn là câu hỏi mở):
//   - Owner/Deadline: theo từng kỳ (CriteriaAssessment), KHÔNG đặt trên Criteria.
//   - Status: nhập tay, lưu DB trên CriteriaAssessment — là khái niệm KHÁC với
//     badge (done/working/stalled) mà dashboard.html tự tính từ delta điểm số
//     giữa 2 kỳ (xem note trên field CriteriaAssessments.Status và ERD.md).
//   - Auth: ASP.NET Core Identity — xem Table AppUsers bên dưới.
//
// ============================================================
// [ĐÃ ĐỔI — 2026-08-12] BỎ HẲN Table AssessmentPeriods
// ============================================================
// Quyết định người dùng: "kỳ được xác định theo ngày tạo CreatedAt chứ
// không có tách kỳ riêng" — không còn entity/bảng "AssessmentPeriod", không
// còn hành động "Tạo kỳ mới" nào ở UI. CriteriaAssessments.CreatedAt (cột
// BaseEntity chuẩn) nay MANG Ý NGHĨA NGHIỆP VỤ trực tiếp: phần ngày của nó
// chính là "kỳ" của record đó. Unique constraint đổi từ (CriteriaId,
// PeriodId) sang (CriteriaId, ngày của CreatedAt). Chi tiết cơ chế ghi
// (upsert-trong-ngày + copy-forward tự động thay cho "Tạo kỳ mới") và cơ
// chế đọc (nhóm theo tuần/tháng qua date_trunc trên CreatedAt, kèm CẢNH BÁO
// đây là carry-forward/as-of CHƯA được người dùng xác nhận trực tiếp): xem
// doc/ERD/ERD.md mục "Kỳ (tuần/tháng/năm) — khái niệm ngầm định".
//
// Câu hỏi còn mở: xem mục "Câu hỏi còn mở" cuối doc/ERD/ERD.md — gồm 2 câu
// cũ (cấu trúc hoá CriteriaEvidence.Content, permission) + 4 câu MỚI phát
// sinh trực tiếp từ việc bỏ AssessmentPeriod (quy ước chia tuần, có
// carry-forward hay không, định nghĩa "Tất cả", CriteriaEvidence có
// copy-forward theo record mới hay không).

Project PlatformManager {
  database_type: 'PostgreSQL'
  Note: '''
    Schema dự kiến cho DTI Weekly — dashboard theo dõi 62 chỉ tiêu chuyển đổi số theo từng kỳ báo cáo (tuần).
    Nguồn: doc/ERD/example_db_ver1.csv (dữ liệu mẫu) + doc/Prototype/dashboard.html (prototype JS).
    Auth: ASP.NET Core Identity (đã chốt).
    Trạng thái: DỰ KIẾN — chưa migrate, đối chiếu lại trước khi dùng thật.
  '''
}

// ============================================================
// AppUsers — người dùng hệ thống, dựa trên ASP.NET Core Identity
// Đã CHỐT dùng ASP.NET Core Identity làm cơ chế auth (xem
// src/BE/.claude/rules/api-controller.md § Auth/Permission).
// ============================================================
Table AppUsers {
  Id uuid [pk, note: 'PK chuẩn của IdentityUser<Guid> — KHÔNG dùng BaseEntity (Identity có vòng đời/field riêng: PasswordHash, SecurityStamp...)']
  UserName varchar(256) [note: 'Cột chuẩn AspNetUsers.UserName']
  Email varchar(256) [note: 'Cột chuẩn AspNetUsers.Email']
  FullName varchar(200) [note: 'Field mở rộng ngoài IdentityUser mặc định — tên hiển thị đầy đủ, phục vụ hiển thị "Phụ trách" trên UI thay vì chỉ UserName']

  Note: '''
    Chi tiết đầy đủ (7 bảng Identity + SysMenu) đã tách sang
    doc/ERD/PlatformManager-corebase.dbml (2026-08-15) — file đó dùng đúng tên
    field BaseEntity mới nhất. Bảng AppUsers ở ĐÂY chỉ còn là điểm neo cho FK
    nghiệp vụ (CriteriaAssessments.OwnerId), không phải nguồn đầy đủ nữa.
  '''
}

// ============================================================
// CriteriaGroups — danh mục 6 nhóm chỉ tiêu (tĩnh)
// Nguồn: cột "Nhóm" trong CSV (text, vd "Hạ tầng và Nền tảng số")
//        + object DTI_ITEMS trong dashboard.html: field "group" ("1".."6")
//          và "groupName" (đi kèm từng chỉ tiêu, lặp lại cho mọi item cùng nhóm)
// ============================================================
Table CriteriaGroups {
  Id uuid [pk, note: 'Base entity — BaseEntity.Id']
  Code varchar(10) [not null, unique, note: 'JS: DTI_ITEMS[].group — "1".."6"']
  Name varchar(200) [not null, note: 'CSV cột "Nhóm" / JS: DTI_ITEMS[].groupName']
  DisplayOrder int [not null, default: 0, note: 'Thứ tự hiển thị — JS renderGroups() lặp theo thứ tự xuất hiện đầu tiên trong DTI_ITEMS (1..6 tuần tự)']
  CreatedAt timestamptz [not null, note: 'Base entity']
  UpdatedAt timestamptz [note: 'Base entity']
  IsDeleted boolean [not null, default: false, note: 'Base entity — soft delete']

  Note: 'Danh mục 6 nhóm chỉ tiêu: Hạ tầng và Nền tảng số, Nhân lực số, An toàn thông tin an ninh mạng, Hoạt động chính quyền số, Hoạt động Kinh tế số, Hoạt động Xã hội số.'
}

// ============================================================
// Criteria — danh mục 62 chỉ tiêu (TĨNH, không đổi theo tuần)
// Nguồn: các cột "Mã"/"Chỉ tiêu"/"Nhóm"/"Điểm tối đa" trong CSV
//        + object DTI_ITEMS hard-code trong <script> đầu dashboard.html
//          (id, name, group/groupName, maxScore)
// ============================================================
Table Criteria {
  Id uuid [pk]
  Code varchar(20) [not null, unique, note: 'CSV cột "Mã" / JS: DTI_ITEMS[].id — vd "1.1", "4.22.1"']
  Name text [not null, note: 'CSV cột "Chỉ tiêu" / JS: DTI_ITEMS[].name — có thể dài nhiều dòng (vd mã 4.22.1, 4.17 trong CSV/JS chứa "\\n")']
  GroupId uuid [not null, ref: > CriteriaGroups.Id]
  MaxScore decimal(6,2) [not null, note: 'CSV cột "Điểm tối đa" / JS: DTI_ITEMS[].maxScore']
  CreatedAt timestamptz [not null]
  UpdatedAt timestamptz
  IsDeleted boolean [not null, default: false]

  Note: '''
    Danh mục 62 chỉ tiêu chuyển đổi số — dữ liệu TĨNH giữa các kỳ báo cáo.
    Tương ứng 1:1 với object DTI_ITEMS hard-code trong dashboard.html.
    KHÔNG chứa điểm số/tiến độ — các giá trị đó biến thiên theo kỳ, xem CriteriaAssessments.
  '''
}

// ============================================================
// CriteriaAssessments — 1 bản ghi đánh giá của 1 chỉ tiêu, gắn với 1 mốc
// thời gian (CreatedAt) — KHÔNG còn PeriodId/AssessmentPeriods (đã bỏ,
// xem banner đầu file). Nguồn: kết hợp CSV (Tự đánh giá/Thẩm định/Trạng
// thái/Phụ trách/Hạn xử lý, theo từng dòng chỉ tiêu) + JS (draft.values[id]
// = tiến độ %, draft.notes[id] = ghi chú tuần).
// ============================================================
Table CriteriaAssessments {
  Id uuid [pk]
  CriteriaId uuid [not null, ref: > Criteria.Id]
  ProgressPercent decimal(5,2) [not null, default: 0, note: 'JS: draft.values[id]/historyData[].values[id] — 0..100, ép kẹp qua Math.max(0,Math.min(100,...)) trong setProgress(). Seed ban đầu = SelfScore/MaxScore*100 (JS: initialProgress, vd id "1.1": 7.04/10 → 70.4), sau đó nhập tay qua ô .progressInput.']
  SelfScore decimal(6,2) [note: 'CSV cột "Tự đánh giá" / JS: DTI_ITEMS[].sourceSelfScore']
  VerifiedScore decimal(6,2) [note: 'CSV cột "Thẩm định" / JS: DTI_ITEMS[].sourceAppraisalScore']
  Status varchar(50) [note: 'CSV cột "Trạng thái", NHẬP TAY, lưu DB — "Chưa thực hiện" | "Đang thực hiện" | "Cần bổ sung minh chứng" | "Hoàn thành". KHÁC với badge (done/working/stalled) mà dashboard.html TỰ TÍNH từ delta điểm số (statusFor()) — badge đó là chỉ số hiển thị suy ra tại FE, không phải field này. Xem ERD.md mục CriteriaAssessment.']
  OwnerId uuid [ref: > AppUsers.Id, note: 'CSV cột "Phụ trách" — đã chốt: FK tới AppUsers (ASP.NET Core Identity). Nullable — luôn rỗng trong dữ liệu mẫu, giữ chỗ cho nghiệp vụ giao việc']
  Deadline date [note: 'CSV cột "Hạn xử lý" — luôn rỗng trong dữ liệu mẫu, giữ chỗ']
  Note text [note: 'JS: draft.notes[id] — "Ghi chú tuần", input .noteInput, hàm setNote()']
  CreatedAt timestamptz [not null, note: '[ĐÃ ĐỔI Ý NGHĨA, 2026-08-12] KHÔNG chỉ là audit — phần ngày của cột này CHÍNH LÀ "kỳ" của record (thay cho AssessmentPeriods.PeriodDate đã bỏ). Bất biến sau khi insert (đúng convention BaseEntity): các lần lưu tiếp theo trong CÙNG 1 ngày UPDATE lại record của ngày đó, không insert mới. Xem doc/ERD/ERD.md mục "Kỳ (tuần/tháng/năm)".']
  UpdatedAt timestamptz [note: 'Đổi mỗi khi có lần lưu thứ 2+ trong CÙNG 1 ngày cho cùng CriteriaId (upsert-trong-ngày)']
  IsDeleted boolean [not null, default: false]

  indexes {
    (CriteriaId, `date(CreatedAt)`) [unique, note: '[ĐÃ ĐỔI, 2026-08-12] thay cho (CriteriaId, PeriodId) — tối đa 1 record/chỉ tiêu/ngày. Cú pháp DBML ở đây chỉ minh hoạ ý định; khi migrate thật dùng expression/filtered unique index của PostgreSQL: CREATE UNIQUE INDEX ... ON "CriteriaAssessments" ("CriteriaId", (CAST("CreatedAt" AS date))) WHERE "IsDeleted" = false — cùng công thức filtered index đã dùng cho Criteria.Code (xem spec/danh-muc-dti/business-rules.md mục 1.1)']
  }

  Note: '''
    Trái tim của tính năng theo dõi tiến độ — 1 bản ghi = 1 chỉ tiêu × 1 NGÀY có thao tác lưu
    (sửa tay 1 ô Tiến độ %/Ghi chú, hoặc 1 dòng trong file Import CSV). KHÔNG còn khái niệm
    "kỳ được tạo tường minh" — "kỳ-tuần"/"kỳ-tháng" chỉ là kết quả group-by CreatedAt lúc truy vấn
    (xem doc/ERD/ERD.md mục "Kỳ (tuần/tháng/năm)").

    Cơ chế ghi (thay thế nút "Tạo kỳ mới từ kỳ gần nhất" + "Lưu tuần này" cũ): lần đầu tiên trong
    ngày có thao tác cho 1 CriteriaId → hệ thống tự COPY-FORWARD toàn bộ 7 field nghiệp vụ từ
    record CreatedAt gần nhất trước đó của cùng CriteriaId (nếu có), rồi áp giá trị đang sửa lên
    trên, insert record mới. Các lần lưu tiếp theo trong CÙNG ngày → UPDATE lại record đó.

    2 giá trị sau đây vẫn là TÍNH TOÁN, KHÔNG lưu cột riêng trong bảng này:
      - "Chênh lệch" (CSV) = SelfScore - VerifiedScore của CÙNG một bản ghi.
      - "Tăng/giảm" (JS: deltaOf()) = progress kỳ này - progress kỳ liền trước, nay tìm "kỳ liền
        trước" bằng CreatedAt (kỳ-tuần/tháng gần nhất có dữ liệu trước kỳ đang xem) thay vì
        AssessmentPeriods.PeriodDate — cần join 2 CriteriaAssessments của cùng CriteriaId ở 2 mốc
        CreatedAt khác nhau, không lưu sẵn.

    ⚠️ CHƯA CHỐT (cần xác nhận người dùng): quy ước chia tuần, có carry-forward (as-of) cho chỉ
    tiêu không có thao tác trong kỳ đang xem hay không, định nghĩa "Tất cả", CriteriaEvidence có
    copy-forward theo record mới hay không — xem doc/ERD/ERD.md mục "Câu hỏi còn mở" nhóm [MỚI].
  '''
}

// ============================================================
// CriteriaEvidences — minh chứng/ghi chú dạng danh sách (1-N)
// Nguồn: cột "Minh chứng/Ghi chú" trong CSV — nhiều dòng, mỗi dòng bắt đầu
//        bằng "*" (vd mã 2.3, 2.4, 4.20, 4.22.8, 6.1, 6.3, 6.5, 4.22.11 có
//        2-3 dòng minh chứng). KHÔNG xuất hiện trong dashboard.html (JS
//        không có UI cho minh chứng dạng danh sách — chỉ có 1 ô "Ghi chú
//        tuần" đơn — xem Note trên field CriteriaAssessments.Note).
// ============================================================
Table CriteriaEvidences {
  Id uuid [pk]
  CriteriaAssessmentId uuid [not null, ref: > CriteriaAssessments.Id]
  Content text [not null, note: '1 dòng minh chứng (đã bỏ tiền tố "*"). 2 dạng quan sát được: "số hiệu văn bản - ngày: mô tả" (vd mã 1.5: "466/PVHXH - 15/03/2026: khảo sát cấu hình máy tính") hoặc ghi chú thẩm định tự do (vd mã 1.4: "Thành viên thẩm định: Không thống nhất tiêu chí..."). Giữ text tự do, không tách DocNumber/DocDate vì định dạng không đồng nhất.']
  OrderIndex int [not null, default: 0, note: 'Thứ tự dòng trong cột "Minh chứng/Ghi chú" gốc của CSV']
  CreatedAt timestamptz [not null]
  UpdatedAt timestamptz
  IsDeleted boolean [not null, default: false]

  Note: '''
    Mỗi dòng bắt đầu bằng "*" trong cột "Minh chứng/Ghi chú" của CSV tách thành 1 record.
    Lưu ý import: một số dòng minh chứng có xuống dòng NỘI BỘ do nội dung dài (vd mã "4.20": dòng
    "* 1043/QĐ-UBND - 03/09/2025: " xuống dòng tiếp "Ban hành Quy chế công tác Văn thư, lưu trữ..." vẫn
    là 1 minh chứng, không phải 2) — khi parse CSV phải tách theo tiền tố "*" ở đầu dòng, không tách
    theo mọi ký tự xuống dòng.
  '''
}
